# flashcard-sync

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  sync.config.toml.example
src/flashcard_sync/: cli.py  config.py  push_anki.py  snapshot.py
src/flashcard_sync/anki/: __init__.py  client.py  note_type.py
src/flashcard_sync/brainscape/: __init__.py  client.py
src/flashcard_sync/canonical/: __init__.py  schema.py  store.py
tests/: test_config.py  test_snapshot_brainscape.py
