[project]
name = "flashcard-sync"
version = "0.1.0"
description = "Two-way sync between Brainscape and Anki, with git as the source of truth."
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pydantic>=2.7",
    "rich>=13.7",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
    "rapidfuzz>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
]

[project.scripts]
sync = "flashcard_sync.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flashcard_sync"]

[tool.ruff]
line-length = 100
target-version = "py311"
